--- a/tutoring-service/package.json
+++ b/tutoring-service/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "^12.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
